--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@
   --color-gray-medium: #666;
   --color-gray-light: #f5f5f5;
   --color-status-error: var(--color-primary-darker);
-  --color-status-success: var(--color-primary-darker);
+  --color-status-success: #90ee90;
   --color-status-warning: var(--color-primary-darker);
   --color-alert-success-bg: var(--color-primary-darker);
   --color-header-separator: #989bb4;
